# ECE665ClassProject

./: .gitignore  CMakeLists.txt  LICENSE  README.md  installprerequisites.sh
include/: matrix_multiplication.hpp  sycl_matrix_multiplication.hpp  utils.hpp
src/: main.cpp  matrix_multiplication.cpp  sycl_matrix_multiplication.cpp
